Fix info container not appearing on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -136,11 +136,6 @@ a {
     background-color: var(--selection-colour);
 }
 
-.info-container {
-    overflow: scroll;
-    height: inherit;
-}
-
 .info-label {
     font-weight: bold;
 }
